Fixed bug in not showing proper amount of news posts.

--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,7 +1,6 @@
 
 .SideBar {
     float: right;
-    width: 25%;
     height: 100%;
     background-color: #488FBF;
     box-shadow: 0 5px 10px grey;
